# fast-api-first

./: README.md  main.py  pyproject.toml  test_main.http
app/api/: api_v1.py  deps.py
app/api/v1/: sample.py
app/config/: config.py
app/db/: session.py
app/dto/: sample.py
app/models/: sample.py
