[tool.poetry]
name = "fast-api-first"
version = "0.1.0"
description = ""
authors = ["mokhs00 <mokhs00@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

